--- a/android/lib/resource/src/main/res/values/strings_non_translatable.xml
+++ b/android/lib/resource/src/main/res/values/strings_non_translatable.xml
@@ -13,7 +13,7 @@
     <string name="shadowsocks" translatable="false">Shadowsocks</string>
     <string name="quic" translatable="false">QUIC</string>
     <string name="local_network_sharing_ip_ranges" translatable="false">
-        <![CDATA[<ul><li>10.0.0.0/8</li><li>172.16.0.0/12</li><li>192.168.0.0/16</li><li>169.254.0.0/16</li><li>fe80::/10</li><li>fc00::/7</li></ul>]]>
+        <![CDATA[<ul><li>10.0.0.0/8</li><li>172.16.0.0/12</li><li>100.64.0.0/10</li><li>192.168.0.0/16</li><li>169.254.0.0/16</li><li>fe80::/10</li><li>fc00::/7</li></ul>]]>
     </string>
     <string name="daita" translatable="false">DAITA</string>
     <string name="daita_full" translatable="false">Defence against AI-guided Traffic Analysis</string>
